# lupaesg

./: .flake8  .gitignore  .pylintrc  main.py  pyproject.toml  setup.py
app/core/: database.py
app/models/: company.py
app/services/: mongodb.py
lupaesg/core/: config.py  database.py  logging.py  mongodb.py  test_integrations.py  test_s3.py
tests/: test_mongodb_connection.py  test_openai.py
