[tool.poetry]
name = "lupaesg"
version = "0.1.0"
description = ""
authors = ["Paulo Fehlauer <paulofeh@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "0.109.2"
uvicorn = "0.27.1"
python-dotenv = "1.0.1"
pymongo = "4.6.1"
motor = "3.3.2"
pydantic = "2.5.3"
pydantic-settings = "2.1.0"


[tool.poetry.group.dev.dependencies]
black = "24.1.1"
pylint = "3.0.3"
flake8 = "7.0.0"

[tool.black]
line-length = 100
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
